--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     margin: 0;
     display: grid;
     grid-template-rows: 3rem auto;
-    color: black;
+    color: 636787;
     background-color: FFD6FF;
   }
   
