--- a/styles.css
+++ b/styles.css
@@ -104,11 +104,19 @@
     left: calc(50% - 125px);
   }
   
-  #kittens {
+  #kittens{
     display: flex;
     flex-flow: row wrap;
     width: 100vw;
-    height: 100vh;
+    height: 20vh;
+    border: 1px solid pink;
+  }
+  #baby-animal-prozac{
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    width: 80vw;
+    height: 80vh;
     border: 1px solid pink;
   }
 
