--- a/styles.css
+++ b/styles.css
@@ -115,18 +115,20 @@
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    width: 80vw;
-    height: 80vh;
+    width: 100vw;
+    height: 60vh;
     border: 1px solid pink;
   }
 
   section {
-    width: 8rem;
-    height: 8rem;
+    width: 10vw;
+    height: 8vh;
     border: #636787;
 
   } 
-
+  #cutie{
+    width: 40vw;
+  }
   p {
     color:  #636787;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
